--- a/microsetta_interface/templates/account_overview.jinja2
+++ b/microsetta_interface/templates/account_overview.jinja2
@@ -51,7 +51,7 @@
     <h2 class="account-h2">{{ _('Active Profiles') }}</h2>
     <div class="row mb-5">
         {% for source in sources %}
-        <div class="col-md-4">
+        <div class="col-md-4 mb-4">
             <div class="card card-profile">
                 <img src="/static/img/profile_card_icon.png" class="mx-auto card-profile-icon">
                 <h2 class="centered profile-card-h2">{{ source.source_name|e}}</h2>
